[package]
name = "wl-mitmproxy"
version = "0.1.1"
edition = "2021"
description = "Wayland MITM proxy for rewriting protocol messages"
license = "MIT OR Apache-2.0"
keywords = ["wayland", "mitm", "appid"]
homepage = "https://github.com/5andr0/wl-mitmproxy"
repository = "https://github.com/5andr0/wl-mitmproxy"
documentation = "https://github.com/5andr0/wl-mitmproxy"
readme = "README.md"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
libc = "0.2"
signal-hook = "0.4.3"
wl-proxy = { version = "0.1.1", features = ["protocol-xdg_shell"] }